--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
-  <html>
-    <head>
-      <title>html_boilerplate</title>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-      <h1>html_boilerplate</h1>
-      <script src='js/main.js'></script>
-    </body>
-  </html>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>awesome5000</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC:400,700italic' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+  <section class="big">
+    <div class='gorgons' id='creatures'>
+      <div class="kids threeLoad" id="2"></div>
+      <div class="kids fourLoad" id="3"></div>
+      <br>
+      <div class="kids twoLoad" id="1"></div>
+      <div class="kids fiveLoad" id="4"></div>
+      <br>
+      <div class="kids userLoad" id="0"></div>
+    </div>
+  </section>
+  <div class="welcome" id="welcomeIntro">
+    <h1>Welcome to the <br> island of the Gorgons.</h1>
+    <p> You're Medusa amongst a circle of your clan. Pick a Gorgon to look at, but be careful. If another Gorgon picks you to point her gaze, you'll both be turned to stone. Be the last Gorgon standing in the garden of statues.</p>
+  </div>
+  <script src='js/main2.js'></script>
+</body>
+
+</html>
