--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <div class="welcome" id="welcomeIntro">
     <h1>Welcome to the <br> Island of the Gorgons</h1>
-    <p> You're Medusa amongst a circle of your clan. Pick a Gorgon to look at, but be careful. If another Gorgon picks you to point her gaze, you'll both be turned to stone. Be the last Gorgon standing in the garden of statues.</p>
+    <p> You're Medusa amongst a circle of your clan. Pick a Gorgon to look at, but be careful. If another Gorgon picks you to point her gaze, you'll both be turned to stone. Every Gorgon's choice will appear on her forehead. Be the last Gorgon standing in the garden of statues.</p>
     <h6>( click through )</h6>
   </div>
 
@@ -58,12 +58,16 @@
   <a href="https://miilkytea.github.io/">
     <div id="winner">
       <p>YOU WIN</p>
+      <br>
+      <h6>play again?</h6>
     </div>
   </a>
 
   <a href="https://miilkytea.github.io/">
     <div id="loser">
       <p>YOU TURNED TO STONE</p>
+      <br>
+      <h6>play again?</h6>
     </div>
   </a>
 
