--- a/index.html
+++ b/index.html
@@ -50,9 +50,32 @@
 
   </section>
 
-  <div class="welcome" id="welcomeIntro">
+  <div class="welcome flex-container" id="welcomeIntro">
     <h1>Welcome to the <br> Island of the Gorgons</h1>
-    <p> You're Medusa amongst a circle of your clan. Pick a Gorgon to look at, but be careful. If another Gorgon picks you to point her gaze, you'll both be turned to stone. Every Gorgon's choice will appear on her forehead. Be the last Gorgon standing in the garden of statues.</p>
+    <p class="direct">You are the blue Medusa amongst your clan.
+      Each of the other's Medusa's numbers can always be seen by hover your mouse over each one.
+    </p>  
+      <img class= "flex-item" src="css/images/starmeds.png">
+    <p>  
+      Its number will correspond to its color!
+    </p>  
+      <img id="pinkPick"src="css/images/pinkpick.png">
+    <p>  
+      The Medusas like to play a very dangerous game, where they look at each other at the same moment. If two Medusas pick each other to look at, then they turn to stone.
+    </p>  
+    <p>  
+      You can see which Medusa picked who by seeing the corresponding number of their pick on their forehead.
+    </p>  
+      <img class= "flex-item" src="css/images/starspicksmeds.png">
+    <p>
+      Here you see that number 1 picked 5, and number 5 picked 1. Both of the Medusas stared into each other's cursed gaze and turn to stone.
+    </p>
+      <img class= "flex-item" src="css/images/stonepicks.png">
+    <p>
+      Be the last Medusa standing not turned to stone. 
+    </p>
+
+    <!-- <p> You're Medusa amongst a circle of your clan. Pick a Gorgon to look at, but be careful. If another Gorgon picks you to point her gaze, you'll both be turned to stone. Every Gorgon's choice will appear on her forehead. Be the last Gorgon standing in the garden of statues.</p> -->
     <h6>( click through )</h6>
   </div>
 
